# wxomftools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  wxBKEditor.fbp
cmake-scripts/: Findwxwidgets29.cmake  Findwxwidgets3.cmake
src/: animationdialog.cpp  animationdialog.h  animationtreedataitem.cpp  animationtreedataitem.h  app.h  editorframe.cpp  editorframe.h  gui.cpp  gui.h  spritedialog.cpp
src/forms/: shared.fbp  wxafeditor.fbp  wxbkeditor.fbp
src/shared/: animationdialog.cpp  animationdialog.h  animationdialog.h~  helpers.cpp  helpers.h  shared.cpp  shared.h  spritedialog.cpp  spritedialog.h  spritedialog.h~  spriteimportdialog.cpp  spriteimportdialog.h  stringtreedataitem.cpp  stringtreedataitem.h
src/wxafeditor/: animationtreedataitem.cpp  animationtreedataitem.h  editorframe.cpp  editorframe.h  gui.cpp  gui.h
src/wxbkeditor/: animationdialog.h  animationtreedataitem.cpp  animationtreedataitem.h  app.cpp  editorframe.cpp  editorframe.h  gui.cpp  gui.h  newanimationdialog.cpp  newanimationdialog.h  spritedialog.h
